--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,11 @@
   "dependencies": {
     "node-sass": "^4.11.0",
     "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "react-dom": "^16.7.0",
+    "react-redux": "^6.0.0",
+    "redux": "^4.0.1",
+    "redux-immutable-state-invariant": "^2.1.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "react-scripts": "2.1.3"
