--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,8 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
+    "react-router-dom": "^5.0.1",
+    "react-sound": "^1.2.0",
     "redux": "^4.0.1",
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-thunk": "^2.3.0"
